# chaoxing

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  backend.example.ini  config.example.yaml  docker-compose.yml  main.py  output.txt  pyproject.toml  requirements.txt  run-web.ps1  web_api.py
.github/workflows/: main.yml
chaoxing/: __init__.py  signers.py
chaoxing/core/: __init__.py  base.py  logger.py
chaoxing/mixins/: __init__.py  sign.py
chaoxing/models/: __init__.py  sign.py
chaoxing/ocr/: slider.py
chaoxing/processors/: __init__.py  live.py  live_process.py  process.py
chaoxing/services/: __init__.py  answer.py  answer_records.py  notification.py  runner.py  work_answer.py
chaoxing/utils/: __init__.py  cipher.py  cookies.py  cxsecret_font.py  decode.py  font_decoder.py
chaoxing/web/: __init__.py  app.py  auth.py  db.py  settings.py
chaoxing/web/api/: __init__.py  accounts.py  admin.py  decisions.py  signs.py  tasks.py
chaoxing/web/models/: __init__.py  entities.py
chaoxing/web/repos/: __init__.py
chaoxing/web/services/: __init__.py  answer_records.py  queries.py  runtime.py
chaoxing/web/ws/: __init__.py  routes.py
docker/backend/: start.sh
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts  style.css
frontend/src/api/: client.ts  http.ts  mock.ts
frontend/src/config/: runtime.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: adminAuth.ts  (+1 more)
script/: example.py
(+13 files in other folders)
