[project]
name = "chaoxing"
version = "3.1.3"
description = "超星学习通/超星尔雅/泛雅超星全自动无人值守完成任务点"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "requests>=2.32.5",
    "pyaes>=1.6.1",
    "beautifulsoup4>=4.14.2",
    "lxml",
    "argparse>=1.4.0",
    "loguru>=0.7.3",
    "celery>=5.5.3",
    "flask>=3.1.2",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.24",
    "fonttools>=4.60.1",
    "openai>=1.109.1",
    "tqdm>=4.67.1",
    "httpx[socks]>=0.28.1",
    "urllib3>=2.5.0",
    "chardet>=3.0.2,<6.0.0",
    "ddddocr==1.5.6",
    "python-multipart",
    "PyYAML>=6.0.2",
]

[tool.setuptools]
packages = { find = { include = ["chaoxing*"] } }
